# filebyte

./: Cargo.toml  README.md  filebyte  install.sh  test.txt  uninstall.sh
src/: analysis.rs  collect.rs  disk.rs  display.rs  main.rs  tree.rs  types.rs  utils.rs
