[package]
name = "filebyte"
version = "0.1.0"
edition = "2021"
authors = ["execRooted <execrooted@gmail.com>"]
description = "A CLI tool to list files and directories with sizes in various units"
license = "MIT"
repository = "https://github.com/yourusername/filebyte"
homepage = "https://github.com/yourusername/filebyte"
readme = "README.md"
keywords = ["cli", "file", "directory", "size", "listing"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
sysinfo = "0.30"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
infer = "0.15"
chrono = { version = "0.4", features = ["serde"] }
