[package]
name = "filebyte"
version = "1.3.1"
edition = "2021"
authors = ["execRooted <rooted@execrooted.com>"]
description = "A powerful CLI tool for analyzing files and directories with detailed metadata, permissions, and size information"
license = "MIT"
repository = "https://github.com/execRooted/filebyte"
homepage = "https://github.com/execRooted/filebyte"
readme = "README.md"
keywords = ["cli", "filesystem", "file-analysis", "permissions", "disk-usage"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
sysinfo = "0.30"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
infer = "0.15"
chrono = { version = "0.4", features = ["serde"] }
